// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package grpc;
option go_package = "app/protos";

// when a user requests to download, we'll need the photo_uid to get the full
// picture to the user will need to update metadata accordingly, use
// UpdateMetadataRequest in metadata.proto
message DownloadPhotoRequest {
  string img_name = 1;
}

message DownloadPhotoResponse {
  bytes img_blob = 1;
}

service DownloadPhoto {
  /*
   * RPC for download a photo
   */
  rpc Download(DownloadPhotoRequest) returns (DownloadPhotoResponse);
}
